添加消息页面，调试接口

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     <string name="copy_url">复制链接</string>
     <string name="no_store">暂无数据</string>
     <string name="study">研发计划</string>
+    <string name="not_read">未读</string>
+    <string name="read">已读</string>
 </resources>
