添加轮播图

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,16 @@
     <string name="app_name">Toinwork</string>
     <string name="company_information">企业资料</string>
     <string name="change_password">修改密码</string>
-    <string name="organize">组织机构代码</string>
+    <string name="organize_code">组织机构代码</string>
+    <string name="tax_number">税务号</string>
+    <string name="address">地址</string>
+    <string name="corporate">法人</string>
+    <string name="model">规模</string>
+    <string name="industry">行业</string>
+    <string name="contact">联系方式</string>
     <string name="action_settings">Settings</string>
     <string name="workplace">工作区</string>
     <string name="message">消息</string>
-    <string name="contact">通讯录</string>
     <string name="setting">设置</string>
     <string name="splash_content">专注快速构建IT业务</string>
     <string name="login">登陆</string>
