--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GLP</string>
+    <string name="app_name">普洛斯金融</string>
     <string name="company_information">企业资料</string>
     <string name="change_password">修改密码</string>
     <string name="password">密码</string>
