--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="industry">行业</string>
     <string name="contact">联系方式</string>
     <string name="register">注册</string>
-    <string name="no_register">还没有GLP账号,立即注册</string>
+    <string name="no_register">还没有账号,立即注册</string>
     <string name="action_settings">Settings</string>
     <string name="workplace">工作区</string>
     <string name="message">消息</string>
@@ -32,7 +32,7 @@
     <string name="login">登陆</string>
     <string name="go_login">去登陆</string>
     <string name="go_login_to_look">只有登录后才能查看哦!</string>
-    <string name="forget_login">已有GLP账号,立即登录</string>
+    <string name="forget_login">已有账号,立即登录</string>
     <string name="toinwork">Toinwork.com</string>
     <string name="no_message_read">暂时没有已读消息哦~</string>
     <string name="no_data">没有数据</string>
@@ -51,6 +51,7 @@
     <string name="face">头像</string>
     <string name="feedback">反馈我们</string>
     <string name="forget_password">忘记密码</string>
+    <string name="reset_password">重置密码</string>
     <string name="help_center">帮助中心</string>
     <string name="about_us">关于我们</string>
     <string name="safe_exit">安全退出</string>
@@ -63,8 +64,8 @@
 
 
     <!--edittext相关文本-->
-    <string name="hint_phone">请输入手机</string>
-    <string name="hint_username">输入您的账号ID</string>
+    <string name="hint_phone">输入手机号</string>
+    <string name="hint_username">输入手机号</string>
     <string name="hint_code">请输入验证码</string>
     <string name="hint_email">请输入邮箱</string>
     <string name="hint_pwd">请输入密码</string>
