--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="setting">设置</string>
     <string name="splash_content">专注快速构建IT业务</string>
     <string name="login">登陆</string>
+    <string name="send_success">发送成功</string>
+    <string name="login_success">登录成功</string>
     <string name="go_login">去登陆</string>
     <string name="go_login_to_look">只有登录后才能查看哦!</string>
     <string name="forget_login">已有账号,立即登录</string>
